# optimize-rs

./: Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml
crates/binding/: Cargo.toml
crates/binding/src/: lib.rs  optimizers.rs  strategies.rs
crates/binding/src/optimizers/: genetic.rs
crates/cli/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: genetic.rs  lib.rs  strategies.rs  traits.rs  types.rs
pysrc/: main.py
pysrc/optimize_rs/: __init__.py  __init__.pyi
pysrc/optimize_rs/optimizers/: __init__.py  __init__.pyi  genetic.pyi
pysrc/optimize_rs/strategies/: __init__.py  __init__.pyi
