[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "optimize-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.maturin]
manifest-path = "crates/binding/Cargo.toml"
python-source = "pysrc"
features = ["pyo3/extension-module"]
module-name = "optimize_rs._optimize_rs"

[dependency-groups]
dev = ["maturin>=1.11.4", "mypy>=1.19.1"]
